fix(platform): update controllers according to the latest structure as in resource-plugin library
